package not.djinni.model.role

data class Company(
    val id: Long,
    val companyName: String,
    val website: String?,
    val description: String
)
