package not.djinni.model.role

data class EmployerProfile(
    val id: Long,
    val companyId: Long,
    val role: String
)
