package not.djinni.model.vacancy

enum class EmploymentTypeCode {
    FULL_TIME,
    PART_TIME,
    CONTRACT,
    TEMPORARY,
    INTERNSHIP,
    FREELANCE
}
