package not.djinni.model.vacancy

enum class JobCategoryCode {
    SOFTWARE_DEV,
    DATA_SCIENCE,
    DEVOPS,
    QA,
    PRODUCT_MGMT,
    DESIGN,
    MARKETING,
    SALES,
    HR,
    FINANCE,
    OPERATIONS,
    SUPPORT
}
