package not.djinni.model.vacancy

data class Salary(
    val min: Int,
    val max: Int
)
