package not.djinni.model.vacancy

enum class VacancyStatusCode {
    DRAFT,
    ACTIVE,
    PAUSED,
    CLOSED,
    EXPIRED
}
